feat: Add static code analysis tools and fix identified issues
- Add SpotBugs and PMD plugins to backend build.gradle
- Add PMD ruleset configuration (config/pmd/ruleset.xml)
- Add ESLint security plugin configuration (.eslintrc.json)

Backend improvements:
- Replace System.out.println with SLF4J Logger
- Add custom GptServiceException for better error handling
- Add null checks in GptService to prevent NullPointerException
- Use String.isBlank() instead of trim().isEmpty()
- Use Locale.ROOT for case conversions
- Catch specific exceptions instead of generic Exception

Frontend improvements:
- Remove all console.log statements for production readiness
- Add eslint-plugin-security for security linting