@@ -1,5 +1,6 @@
 package com.whisperline.backend.service;
 
+import java.util.Locale;
 import java.util.regex.Pattern;
 
 import org.springframework.stereotype.Component;
@@ -14,7 +15,7 @@ public class ResponseValidator {
         Pattern.compile("(?i)risk\\s+level\\s*:", Pattern.CASE_INSENSITIVE);
 
     public ValidationResult validate(String response) {
-        if (response == null || response.trim().isEmpty()) {
+        if (response == null || response.isBlank()) {
             return new ValidationResult(false, "Response is empty");
         }
 
@@ -31,12 +32,12 @@ public class ResponseValidator {
         String counselingValue = null;
         String riskValue = null;
 
-        for (String line : lines) {
-            line = line.trim();
-            if (COUNSELING_RESPONSE_PATTERN.matcher(line).find()) {
-                counselingValue = extractValue(line, "Counseling Response:");
-            } else if (RISK_LEVEL_PATTERN.matcher(line).find()) {
-                riskValue = extractValue(line, "Risk Level:");
+        for (String rawLine : lines) {
+            String trimmedLine = rawLine.trim();
+            if (COUNSELING_RESPONSE_PATTERN.matcher(trimmedLine).find()) {
+                counselingValue = extractValue(trimmedLine, "Counseling Response:");
+            } else if (RISK_LEVEL_PATTERN.matcher(trimmedLine).find()) {
+                riskValue = extractValue(trimmedLine, "Risk Level:");
             }
         }
 
@@ -61,7 +62,7 @@ public class ResponseValidator {
     }
 
     private String extractValue(String line, String key) {
-        int index = line.toLowerCase().indexOf(key.toLowerCase());
+        int index = line.toLowerCase(Locale.ROOT).indexOf(key.toLowerCase(Locale.ROOT));
         if (index >= 0) {
             return line.substring(index + key.length()).trim();
         }
@@ -86,4 +87,3 @@ public class ResponseValidator {
         }
     }
 }
-
